[package]
name = "pytopi"
version = "0.1.0"
authors = ["defiori"]
license = "MPL-2.0"
edition = "2018"

[lib]
name = "pytopi"
crate-type = ["cdylib"]

[dependencies]
serde_json = "^1.0"
topi = { version = "^0.1.0", path = "../../topi/topi", default-features = false, features = ["c-node"] }
topi_node_python = { version = "^0.1.0", path = "../../topi/topi_node_python", default-features = false }
pyo3 = { version = "^0.13", features = ["extension-module"]}
